infra/k8s/common/favorites-postgresql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favorites-postgresql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favorites-postgresql
  template:
    metadata:
      labels:
        app: favorites-postgresql
    spec:
      containers:
        - name: favorites-postgresql
          image: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: favorites-postgresql-srv
spec:
  selector:
    app: favorites-postgresql
  ports:
    - name: database
      protocol: TCP
      port: 5432
      targetPort: 5432
